src/test/ui/parser/pat-lt-bracket-2.rs
fn a(B<) {}
   //~^ error: expected one of `:` or `@`, found `<`

fn main() {}
